# 2024-EUMaster4HPC-Student-Challenge

./: CMakeLists.txt
